Consistent naming of HTML id attributes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div data-role="header">
 				<h1>Students</h1>
 				<a class="ui-btn-left" href="#options" data-icon="gear" data-transition="flip" data-iconpos="notext">Options</a>
-				<a id="student-button" class="ui-btn-right" data-icon="plus" data-direction="forward" data-iconpos="notext" href="#student-form">Add Student</a>
+				<a id="home-button-student" class="ui-btn-right" data-icon="plus" data-direction="forward" data-iconpos="notext" href="#student-form">Add Student</a>
 			</div><!-- /header -->
 			<div data-role="content">
 				<ul data-role="listview" data-filter="true">
@@ -61,7 +61,7 @@
 			<div data-role="header">
 				<h1>Student</h1>
 				<a class="ui-btn-left" data-icon="home" data-iconpos="notext" data-direction="reverse" href="#home">Home</a>
-				<a id="note-button" class="ui-btn-right" data-icon="plus" data-direction="forward" data-iconpos="notext" href="#note-form">Add Note</a>
+				<a id="student-button-note" class="ui-btn-right" data-icon="plus" data-direction="forward" data-iconpos="notext" href="#note-form">Add Note</a>
 			</div><!-- /header -->
 			<div data-role="content">
 				<div id="student-notes">
@@ -103,7 +103,7 @@
 		<div id="note" data-role="page">
 			<div data-role="header">
 				<h1>View Note</h1>
-				<a id="note-back-button" class="ui-btn-left" data-icon="back" data-iconpos="notext" data-direction="reverse" href="javascript:history.back();">Back</a>
+				<a id="note-button-back" class="ui-btn-left" data-icon="back" data-iconpos="notext" data-direction="reverse" href="javascript:history.back();">Back</a>
 			</div><!-- /header -->
 			<div data-role="content">
 				<p class="note-student"></p>
@@ -168,7 +168,7 @@
 				<a class="ui-btn-left" data-icon="back" data-iconpos="notext" data-direction="reverse" href="javascript:history.back();">Options</a>
 			</div><!-- /header -->
 			<div data-role="content">
-				<div id="logo"><img src="assets/images/logo.png" /></div>
+				<div id="options-about-logo"><img src="assets/images/logo.png" /></div>
 				<p>Copyright &copy; 2012 Provincial Outreach Program for Fetal Alcohol Spectrum Disorder (POPFASD).</p>
 				<p>Concept by Stacey Wakabayashi. Design by Stacey Wakabayashi and Matt Ferris. Development by Matt Ferris.</p>
 				<p>For support, please visit our website at <a href="http://www.fadoutreach.ca/cora/support">www.fasdoutreach.ca/cora/support</a>.</p>
