--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 
 <html lang="en">
 	<head>
+		<!--
+		 * CORA - Classroom Observation Recording Application
+		 * Copyright (C) 2012  POPFASD (Provincial Outreach Program for Fetal
+		 * Alcohol Spectrum Disorder)
+		 * 
+		 * This program is free software: you can redistribute it and/or modify
+		 * it under the terms of the GNU General Public License as published by
+		 * the Free Software Foundation, either version 3 of the License, or
+		 * (at your option) any later version.
+		 * 
+		 * This program is distributed in the hope that it will be useful,
+		 * but WITHOUT ANY WARRANTY; without even the implied warranty of
+		 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+		 * GNU General Public License for more details.
+		 * 
+		 * http://fasdoutreach.ca/~cora/LICENSE.TXT
+		-->
 		<title>Cora</title>
 		<meta name="Content-Type" content="text/html" />
 		<meta name="Charset" content="UTF-8" />
