Added cora.appcache manifest for offline use

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" manifest="cora.appcache">
 	<head>
 		<!--
 		 * CORA - Classroom Observation Recording Application
