--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
 				<a class="ui-btn-left" data-icon="home" data-iconpos="notext" data-direction="reverse" href="#home">Home</a>
 			</div><!-- /header -->
 			<div data-role="content">
-				<p class="note-student"></p>
-				<p class="note-created"></p>
-				<p class="note-tags"></p>
+				<div class="note-header">
+					<p class="note-student"></p>
+					<p class="note-created"></p>
+					<p class="note-tags"></p>
+				</div>
 				<p class="note-content"></p>
 				<div class="ui-grid-b">
 					<div class="ui-block-a"><a id="note-button-back" data-role="button" data-direction="reverse" href="javascript:history.back();">Back</a></div>
