Initial commit of tag suggestions code for #note-form

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 					<input id="note-form-student-name" type="text" name="studentName" />
 					<label id="note-form-tags-label" for="tags">Tags (optional)</label>
 					<input id="note-form-tags" type="text" name="tags" />
+					<div id="note-form-tags-suggestions">
+						<ul>
+						</ul>
+					</div>
 					<label id="note-form-content-label" for="content">Note</label>
 					<textarea id="note-form-content" name="content"></textarea>
 					<div class="ui-grid-a">
