Used jqm markup on tag suggestions for consistent look

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<label id="note-form-tags-label" for="tags">Tags (optional)</label>
 					<input id="note-form-tags" type="text" name="tags" />
 					<div id="note-form-tags-suggestions">
-						<ul>
+						<ul data-role="listview">
 						</ul>
 					</div>
 					<label id="note-form-content-label" for="content">Note</label>
