--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 		<meta name="Content-Type" content="text/html" />
 		<meta name="Charset" content="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="assets/themes/jquery.mobile-1.0.1.min.css" />
+		<link rel="stylesheet" type="text/css" href="assets/themes/jquery.mobile-1.1.0.min.css" />
 		<link rel="stylesheet" type="text/css" href="assets/themes/cora.min.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-		<script type="text/javascript" src="assets/js/jquery-1.7.min.js"></script>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/css/jquery.mobile.structure-1.1.0.min.css" /> -->
+		<script type="text/javascript" src="assets/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.mobile.router.min.js"></script>
-		<script type="text/javascript" src="assets/js/jquery.mobile-1.0.1.min.js"></script>
+		<script type="text/javascript" src="assets/js/jquery.mobile-1.1.0.min.js"></script>
 		<script type="text/javascript" src="assets/js/persistence.js"></script>
 		<script type="text/javascript" src="assets/js/persistence.store.sql.js"></script>
 		<script type="text/javascript" src="assets/js/persistence.store.websql.js"></script>
