Fixed broken cancel button on note form

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<label id="note-form-content-label" for="content">Note</label>
 					<textarea id="note-form-content" name="content"></textarea>
 					<div class="ui-grid-a">
-						<div class="ui-block-a"><a data-role="button" data-direction="reverse" href="javascript:history.back();">Cancel</a></div>
+						<div class="ui-block-a"><a id="note-form-button-back" data-role="button" data-direction="reverse" data-direction="reverse" href="">Cancel</a></div>
 						<div class="ui-block-b"><input type="submit" value="Save" /></div>
 					</div><!-- /ui-grid-a -->
 				</form>
