Commiting changes to cora.js and index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			</div><!-- /header -->
 			<div data-role="content">
 				<p>Copy and paste the content below into a text editor or spreadsheet program.</p>
-				<textarea id="options-export-data-textarea" disabled="disabled"></textarea>
+				<textarea id="options-export-data-textarea"></textarea>
 				<div class="ui-grid-a">
 					<div><a id="options-export-button-back" data-role="button" data-direction="reverse" href="#options">Done</a></div>
 				</div>
