Updated version of jquery

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<link rel="stylesheet" type="text/css" href="assets/themes/jquery.mobile-1.2.0.min.css" />
 		<link rel="stylesheet" type="text/css" href="assets/themes/cora.min.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-		<script type="text/javascript" src="assets/js/jquery-1.7.2.min.js"></script>
+		<script type="text/javascript" src="assets/js/jquery-1.9.0.min.js"></script>
+		<script type="text/javascript" src="assets/js/jquery-migrate-1.0.0.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.mobile.router.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.mobile-1.2.0.min.js"></script>
 		<script type="text/javascript" src="assets/js/persistence.js"></script>
