Changed filter text for #home and #options-manage-tags, see tinyissue#107

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<a id="home-button-student" class="ui-btn-right" data-icon="plus" data-direction="forward" data-iconpos="notext" href="#student-form">Add Student</a>
 			</div><!-- /header -->
 			<div data-role="content">
-				<ul data-role="listview" data-filter="true">
+				<ul data-role="listview" data-filter="true" data-filter-placeholder="Filter students...">
 				</ul>
                 <p id="home-disclaimer">DISCLAIMER: The following application was designed to assist you in your work with students. Your use of this app should be in compliance with the Freedom of Information and Privacy policies of your jurisdiction</p>
 			</div><!-- /content -->
@@ -297,7 +297,7 @@
 				<a class="ui-btn-left" data-icon="gear" data-iconpos="notext" data-direction="reverse" href="#options">Options</a>
 			</div><!-- /header -->
 			<div data-role="content">
-				<ul data-role="listview" data-filter="true">
+				<ul data-role="listview" data-filter="true" data-filter-placeholder="Filter tags...">
 				</ul>
 			</div><!-- /content -->
 		</div><!-- /page -->
